--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.8",
     "@types/nodemailer": "^6.4.17",
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.12",
