feat : added oauth

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 JWT_SECRET=imqQLCI3Ro6b8EQIrz3CHFy9PnT9g4YqfV8NpbM6rYY=
-MONGODB_URI=mongodb+srv://wisdomvolt:UMOV2OsZ4i1IUB0E@cluster0.m7svv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://wisdomvolt:Ti6Uvvgrcrym0GcG@cluster0.owgug.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 EMAIL_PASSWORD=wexq moll tegn euho
 PORT=5000
 TWITTER_CLIENT_ID=RGRkSlN1UXA0ZUpXTWVTc1N3TUE6MTpjaQ
