--- a/env.example
+++ b/env.example
@@ -12,3 +12,4 @@ TELEGRAM_APP_HASH=9a3ef33c36447f16cd8de4d8605879c9
 TELEGRAM_BOT_TOKEN=7419743815:AAHK9jlKa9pOh-sZMWsBoJ8XI3B5MDMa7I8
 PAYSTACK_SECRET_KEY=sk_test_689c168be877c584bb283fc3be28b8c819f46e82
 PAYSTACK_PUBLIC_KEY=pk_test_65078cf912f4ba0f93317e14427fea8d8dc58fae
+FRONTEND_URL=http://localhost:3000
